feat(notebooks): add LIME explainability demo in 04_train_evolution notebook

--- a/notebooks/04_train_evolution.ipynb
+++ b/notebooks/04_train_evolution.ipynb
@@ -206,6 +206,24 @@
       "Data sizes → train: 309520, val: 38690\n",
       "Class weights: [1.0000032308194327, 1.0000032308194327, 0.999993538423763]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\micha\\.conda\\envs\\myenv\\lib\\site-packages\\transformers\\training_args.py:1611: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU:   7.5%   RAM:  81.0%\n",
+      "GPU: NVIDIA GeForce RTX 4060 Laptop GPU | Used: 0.44 GB / 8.59 GB\n",
+      "------------------------------------------------------------\n",
+      "⏳ Starting trainer.train() …\n"
+     ]
     }
    ],
    "source": [
@@ -697,6 +715,44 @@
     "    pred_label = list(config['model']['label_mapping'].keys())[y_pred[idx]]\n",
     "    print(f\"\\nExample {idx}: True = {true_label}, Predicted = {pred_label}\")\n",
     "    print(test_df.iloc[idx]['text'][:200] + \"...\\n\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explainability with LIME\n",
+    "\n",
+    "I use LIME to interpret the model’s prediction for a specific example, showing which words contributed most to the decision.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import dashboard_utils\n",
+    "\n",
+    "# Choose an example (first misclassified if available, else index 0)\n",
+    "idx = mis_idx[0] if len(mis_idx) > 0 else 0\n",
+    "sample_text = test_df.iloc[idx]['text']\n",
+    "true_label = test_df.iloc[idx]['label']\n",
+    "print(f\"Explaining example {idx} (True label: {true_label})\\n\")\n",
+    "print(sample_text[:300] + \"...\\n\")\n",
+    "\n",
+    "# Generate LIME explanation\n",
+    "expl = dashboard_utils.explain_prediction(\n",
+    "    sample_text,\n",
+    "    tokenizer_roberta if best_model==\"RoBERTa\" else tokenizer_bert,\n",
+    "    trainer_roberta.model if best_model==\"RoBERTa\" else trainer_bert.model,\n",
+    "    num_features=6\n",
+    ")\n",
+    "\n",
+    "# Display the top contributing words\n",
+    "print(\"Top contributing words and weights:\")\n",
+    "for word, weight in expl:\n",
+    "    print(f\"{word:>15}: {weight:.3f}\")\n"
    ]
   }
  ],
