docs(notebooks): add Longformer training guidance in 05_longformer_full notebook

--- a/notebooks/05_longformer_full.ipynb
+++ b/notebooks/05_longformer_full.ipynb
@@ -50,7 +50,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Training Longformer (Not Executed)\n",
+    "\n",
+    "Normally, I would now fine‑tune Longformer similarly to BERT/RoBERTa:\n",
+    "1. Tokenize the full train/val sets with `max_length=4096`.  \n",
+    "2. Create `Dataset` objects with labels.  \n",
+    "3. Set up `TrainingArguments` (reduce `batch_size` to 4 due to memory).  \n",
+    "4. Instantiate `CustomTrainer` with `model_long`, metrics, and callbacks.  \n",
+    "5. Call `trainer_long.train()`.\n",
+    "\n",
+    "However, training with 4,096‑token sequences is very slow (≈3-4× per‑epoch time of RoBERTa). To conserve resources, we are **not** running a full Longformer training here.\n",
+    "\n",
+    "```python\n",
+    "# (Pseudo‑code – do not run)\n",
+    "# train_enc_long = tokenizer_long(train_texts, padding=True, truncation=True, max_length=4096)\n",
+    "# val_enc_long   = tokenizer_long(val_texts, padding=True, truncation=True, max_length=4096)\n",
+    "# train_dataset_long = Dataset.from_dict({...})\n",
+    "# training_args_long = TrainingArguments(output_dir=..., num_train_epochs=3, per_device_train_batch_size=4, ...)\n",
+    "# trainer_long = CustomTrainer(model_long, args=training_args_long, ...)\n",
+    "# trainer_long.train()\n",
+    "```\n",
+    "While Longformer may improve recall on very long articles, our dataset’s median length (~250 words) is well within 512 tokens, so RoBERTa suffices for deployment."
+   ]
   }
  ],
  "metadata": {
