docs(notebooks): add conclusion in 05_longformer_full notebook

--- a/notebooks/05_longformer_full.ipynb
+++ b/notebooks/05_longformer_full.ipynb
@@ -73,6 +73,15 @@
     "```\n",
     "While Longformer may improve recall on very long articles, our dataset’s median length (~250 words) is well within 512 tokens, so RoBERTa suffices for deployment."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "I provided the full scaffold to fine‑tune Longformer for extended contexts, but did not execute a complete training run to conserve resources. Given our dataset’s median length (~250 words), a 512‑token model already captures most content. My final chosen model remains **RoBERTa‑base**, which I'm fine‑tuned and saved for deployment.\n"
+   ]
   }
  ],
  "metadata": {
