feat(notebooks): add app.run_server command to 06_dashboard_dash notebook

--- a/notebooks/06_dashboard_dash.ipynb
+++ b/notebooks/06_dashboard_dash.ipynb
@@ -128,6 +128,16 @@
     "    dashboard_utils.save_session_entry(text, label, mode='json')\n",
     "    return dcc.Markdown(\"\\n\".join(lines))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True, host='0.0.0.0', port=8050)\n"
+   ]
   }
  ],
  "metadata": {
