feat(dash): add Evaluation and Inference tab UI in 06_dashboard_dash

--- a/notebooks/06_dashboard_dash.ipynb
+++ b/notebooks/06_dashboard_dash.ipynb
@@ -16,52 +16,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:Image not found, skipping: C:\\Testing\\Final_Year_Project\\AI-Text-Detection-Tool\\diagrams\\confusion_matrix.png\n",
+      "WARNING:root:Image not found, skipping: C:\\Testing\\Final_Year_Project\\AI-Text-Detection-Tool\\diagrams\\roc_curves.png\n"
+     ]
+    }
+   ],
    "source": [
     "import dash\n",
     "from dash import dcc, html\n",
     "import base64, logging\n",
     "from pathlib import Path\n",
+    "from typing import Optional\n",
+    "\n",
+    "# Initialize Dash app\n",
+    "app = dash.Dash(__name__)\n",
+    "app.title = \"AI Text Detector Dashboard\"\n",
     "\n",
     "# ——— 1) Auto‑locate your diagrams/ directory ————————————————\n",
-    "def find_diagrams_dir(start: Path = Path.cwd(), marker: str = \"diagrams\") -> Path:\n",
+    "def find_diagrams_dir(start: Path = Path.cwd(), marker: str = \"diagrams\") -> Optional[Path]:\n",
+    "    \"\"\"\n",
+    "    Walk upward from `start` through its parents until you find a folder named `marker`.\n",
+    "    Return the Path to that folder, or None if not found.\n",
+    "    \"\"\"\n",
     "    for folder in (start, *start.parents):\n",
     "        candidate = folder / marker\n",
     "        if candidate.is_dir():\n",
     "            return candidate\n",
-    "    raise FileNotFoundError(f\"Couldn’t locate a '{marker}/' directory under {start!s}\")\n",
+    "    logging.warning(f\"Couldn’t locate a '{marker}/' directory under {start}\")\n",
+    "    return None\n",
     "\n",
     "DIAGRAMS_DIR = find_diagrams_dir()\n",
     "\n",
-    "# ——— 2) Helper to read & encode image files as base64 URIs ————————\n",
-    "def encode_image(filename: str) -> str:\n",
+    "# ——— 2) Helper to read & encode image files as base64 URIs, safely ——————\n",
+    "def encode_image(filename: str) -> Optional[str]:\n",
+    "    \"\"\"\n",
+    "    Given a filename (e.g. \"class_distribution.png\"), look in DIAGRAMS_DIR,\n",
+    "    read it if present, and return a data URI. If missing, log & return None.\n",
+    "    \"\"\"\n",
+    "    if DIAGRAMS_DIR is None:\n",
+    "        return None\n",
+    "\n",
     "    img_path = (DIAGRAMS_DIR / filename).resolve()\n",
     "    if not img_path.exists():\n",
-    "        raise FileNotFoundError(f\"Couldn’t find image {img_path}\")\n",
-    "    with open(img_path, \"rb\") as f:\n",
-    "        b64 = base64.b64encode(f.read()).decode(\"utf-8\")\n",
-    "    return f\"data:image/png;base64,{b64}\"\n",
+    "        logging.warning(f\"Image not found, skipping: {img_path}\")\n",
+    "        return None\n",
     "\n",
-    "# ——— 3) Load all of your diagrams by their exact filenames ————————\n",
-    "class_dist_img                  = encode_image(\"class_distribution.png\")\n",
-    "class_weights_img               = encode_image(\"class_weights.png\")\n",
-    "length_dist_img                 = encode_image(\"length_distribution.png\")\n",
-    "split_pie_img                   = encode_image(\"split_proportions_pie.png\")\n",
-    "readability_bar_img             = encode_image(\"readability_sentiment_bar.png\")\n",
-    "readability_bar_annotated_img   = encode_image(\"readability_sentiment_bar_annotated.png\")\n",
-    "readability_box_img             = encode_image(\"readability_sentiment_box.png\")\n",
-    "readability_dist_img            = encode_image(\"readability_sentiment_dist.png\")\n",
-    "readability_dist_colored_img    = encode_image(\"readability_sentiment_dist_colored.png\")\n",
-    "conf_matrix_img                 = encode_image(\"baseline_confusion_matrix.png\")\n",
-    "pr_curve_img                    = encode_image(\"baseline_pr_curves.png\")\n",
-    "roc_curves_img                  = encode_image(\"baseline_roc_curves.png\")\n",
+    "    try:\n",
+    "        raw = img_path.read_bytes()\n",
+    "        b64 = base64.b64encode(raw).decode(\"utf-8\")\n",
+    "        return f\"data:image/png;base64,{b64}\"\n",
+    "    except Exception as e:\n",
+    "        logging.warning(f\"Failed to encode {img_path}: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# ——— 3) Load pre‑generated plots (won’t crash if missing) ————————\n",
+    "class_dist_img  = encode_image(\"class_distribution.png\")\n",
+    "length_dist_img = encode_image(\"length_distribution.png\")\n",
+    "conf_matrix_img = encode_image(\"confusion_matrix.png\")\n",
+    "roc_curves_img  = encode_image(\"roc_curves.png\")\n",
     "\n",
     "# ——— 4) Define app layout ————————————————————————————————\n",
-    "app = dash.Dash(__name__)\n",
-    "app.title = \"AI Text Detector Dashboard\"\n",
-    "\n",
     "app.layout = html.Div([\n",
     "    html.H1(\n",
     "        \"AI‑Generated Text Detection Dashboard\",\n",
@@ -72,24 +93,23 @@
     "        dcc.Tab(label=\"Evaluation\", value=\"tab-eval\"),\n",
     "        dcc.Tab(label=\"Inference\",  value=\"tab-inf\"),\n",
     "    ]),\n",
-    "    html.Div(id=\"tab-content\")  # Container to dynamically render tab content\n",
-    "])\n"
+    "    html.Div(id=\"tab-content\")\n",
+    "])\n",
+    "\n",
+    "# (Callbacks will go here in later cells…)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dash.dependencies import Input, Output  # Callback inputs/outputs for interactivity\n",
+    "from dash.dependencies import Input, Output\n",
     "\n",
-    "# Callback to render content based on selected tab\n",
     "@app.callback(Output(\"tab-content\", \"children\"), Input(\"tabs\", \"value\"))\n",
     "def render_tab_content(tab):\n",
-    "    \"\"\"Return the appropriate layout content for the selected tab.\"\"\"\n",
     "    if tab == \"tab-eda\":\n",
-    "        # EDA tab: show class distribution and length distribution plots\n",
     "        return html.Div([\n",
     "            html.H3(\"Exploratory Data Analysis\", style={\"textAlign\": \"center\", \"marginTop\": \"1em\"}),\n",
     "            html.Img(src=class_dist_img, style={\"width\": \"45%\", \"display\": \"inline-block\", \"padding\": \"1em\"}),\n",
@@ -101,18 +121,36 @@
     "            )\n",
     "        ])\n",
     "    elif tab == \"tab-eval\":\n",
-    "        # Evaluation content to be added in the next commit\n",
-    "        return html.Div()\n",
+    "        # Evaluation tab: show confusion matrix and ROC curves\n",
+    "        return html.Div([\n",
+    "            html.H3(\"Model Evaluation\", style={\"textAlign\": \"center\", \"marginTop\": \"1em\"}),\n",
+    "            html.Img(src=conf_matrix_img, style={\"width\": \"40%\", \"display\": \"inline-block\", \"padding\": \"1em\"}),\n",
+    "            html.Img(src=roc_curves_img, style={\"width\": \"50%\", \"display\": \"inline-block\", \"padding\": \"1em\"}),\n",
+    "            html.P(\n",
+    "                \"Overall accuracy ~91%. The model excels at identifying human-written text (near 99% recall) \"\n",
+    "                \"and mostly confuses paraphrased vs directly AI-generated text.\",\n",
+    "                style={\"textAlign\": \"center\", \"fontStyle\": \"italic\", \"marginTop\": \"0.5em\"}\n",
+    "            )\n",
+    "        ])\n",
     "    elif tab == \"tab-inf\":\n",
-    "        # Inference content to be added later\n",
-    "        return html.Div()\n",
-    "    # Fallback (should not normally happen)\n",
+    "        # Inference tab: textarea + button + placeholder for results\n",
+    "        return html.Div([\n",
+    "            html.H3(\"Try the Detector\", style={\"textAlign\": \"center\", \"marginTop\": \"1em\"}),\n",
+    "            dcc.Textarea(\n",
+    "                id=\"input-text\",\n",
+    "                placeholder=\"Enter article text here...\",\n",
+    "                style={\"width\": \"80%\", \"height\": \"100px\"}\n",
+    "            ),\n",
+    "            html.Br(),\n",
+    "            html.Button(\"Detect\", id=\"detect-button\", n_clicks=0, style={\"marginTop\": \"0.5em\"}),\n",
+    "            html.Div(id=\"result-output\", style={\"marginTop\": \"1em\"})\n",
+    "        ])\n",
     "    return html.Div()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +168,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1f3e2914cd0>"
+       "<IPython.lib.display.IFrame at 0x1ad3700e0a0>"
       ]
      },
      "metadata": {},
@@ -139,7 +177,7 @@
    ],
    "source": [
     "if __name__ == \"__main__\":\n",
-    "    app.run_server(debug=True, port=8050)\n"
+    "    app.run_server(debug=True)\n"
    ]
   }
  ],
