feat(dash): wire up inference callback to run model and display probabilities

--- a/notebooks/06_dashboard_dash.ipynb
+++ b/notebooks/06_dashboard_dash.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,10 @@
     "import base64, logging\n",
     "from pathlib import Path\n",
     "from typing import Optional\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import logging\n",
     "\n",
     "# Initialize Dash app\n",
     "app = dash.Dash(__name__)\n",
@@ -101,6 +105,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load model & tokenizer once\n",
+    "model_path = \"diagrams/final_model\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
+    "model = AutoModelForSequenceClassification.from_pretrained(model_path)\n",
+    "model.eval()\n",
+    "\n",
+    "# Class names in the correct order\n",
+    "label_names = [\"Human-written\", \"AI-paraphrased\", \"AI-generated\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
@@ -146,6 +166,55 @@
     "            html.Div(id=\"result-output\", style={\"marginTop\": \"1em\"})\n",
     "        ])\n",
     "    return html.Div()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dash.dependencies import Input, Output\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output(\"result-output\", \"children\"),\n",
+    "    [Input(\"detect-button\", \"n_clicks\"), Input(\"input-text\", \"value\")]\n",
+    ")\n",
+    "def run_detection(n_clicks, input_text):\n",
+    "    \"\"\"Run model when Detect is clicked, then display prediction and probabilities.\"\"\"\n",
+    "    if not n_clicks or not input_text:\n",
+    "        return \"\"\n",
+    "    # Tokenize + predict\n",
+    "    tokens = tokenizer(\n",
+    "        input_text, return_tensors=\"pt\",\n",
+    "        truncation=True, padding=True, max_length=512\n",
+    "    )\n",
+    "    with torch.no_grad():\n",
+    "        logits = model(**tokens).logits\n",
+    "        probs = torch.softmax(logits, dim=1)[0].cpu().numpy()\n",
+    "    pred_idx = int(np.argmax(probs))\n",
+    "    pred_label = label_names[pred_idx]\n",
+    "    confidence = probs[pred_idx]\n",
+    "\n",
+    "    logging.info(f\"Predicted {pred_label} with {confidence:.3f}\")\n",
+    "\n",
+    "    # Build display components\n",
+    "    prob_rows = []\n",
+    "    for i, name in enumerate(label_names):\n",
+    "        pct = probs[i] * 100\n",
+    "        bar = html.Div(style={\n",
+    "            \"width\": f\"{pct}%\", \"height\": \"8px\", \"backgroundColor\": \"#4c8bf5\"\n",
+    "        })\n",
+    "        prob_rows.append(\n",
+    "            html.Div([bar, html.Span(f\" {name}: {pct:.1f}%\")],\n",
+    "                     style={\"display\": \"flex\", \"alignItems\": \"center\", \"margin\": \"4px 0\"})\n",
+    "        )\n",
+    "\n",
+    "    return html.Div([\n",
+    "        html.H4(f\"Prediction: {pred_label}\", style={\"textAlign\": \"center\"}),\n",
+    "        html.P(f\"Confidence: {confidence*100:.2f}%\", style={\"textAlign\": \"center\"}),\n",
+    "        html.Div(prob_rows, style={\"margin\": \"0.5em 0\"})\n",
+    "    ])\n"
    ]
   },
   {
