feat(dash): add LIME-based word highlights in Inference tab

--- a/notebooks/06_dashboard_dash.ipynb
+++ b/notebooks/06_dashboard_dash.ipynb
@@ -18,6 +18,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash\n",
+    "from dash import dcc, html\n",
+    "import base64, logging\n",
+    "from pathlib import Path\n",
+    "from typing import Optional\n",
+    "import torch\n",
+    "import numpy as np\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import logging\n",
+    "from utils import dashboard_utils  # for LIME explanations\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -29,15 +47,6 @@
     }
    ],
    "source": [
-    "import dash\n",
-    "from dash import dcc, html\n",
-    "import base64, logging\n",
-    "from pathlib import Path\n",
-    "from typing import Optional\n",
-    "import torch\n",
-    "import numpy as np\n",
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import logging\n",
     "\n",
     "# Initialize Dash app\n",
     "app = dash.Dash(__name__)\n",
@@ -165,7 +174,7 @@
     "            html.Button(\"Detect\", id=\"detect-button\", n_clicks=0, style={\"marginTop\": \"0.5em\"}),\n",
     "            html.Div(id=\"result-output\", style={\"marginTop\": \"1em\"})\n",
     "        ])\n",
-    "    return html.Div()\n"
+    "    return html.Div() \n"
    ]
   },
   {
@@ -181,10 +190,9 @@
     "    [Input(\"detect-button\", \"n_clicks\"), Input(\"input-text\", \"value\")]\n",
     ")\n",
     "def run_detection(n_clicks, input_text):\n",
-    "    \"\"\"Run model when Detect is clicked, then display prediction and probabilities.\"\"\"\n",
     "    if not n_clicks or not input_text:\n",
     "        return \"\"\n",
-    "    # Tokenize + predict\n",
+    "    # 1) Tokenize & predict\n",
     "    tokens = tokenizer(\n",
     "        input_text, return_tensors=\"pt\",\n",
     "        truncation=True, padding=True, max_length=512\n",
@@ -195,10 +203,17 @@
     "    pred_idx = int(np.argmax(probs))\n",
     "    pred_label = label_names[pred_idx]\n",
     "    confidence = probs[pred_idx]\n",
+    "    logging.info(f\"Predicted {pred_label} ({confidence:.3f})\")\n",
     "\n",
-    "    logging.info(f\"Predicted {pred_label} with {confidence:.3f}\")\n",
+    "    # 2) Get LIME explanation (top 6 words)\n",
+    "    explanation = dashboard_utils.explain_prediction(\n",
+    "        input_text, tokenizer, model, num_features=6\n",
+    "    )\n",
+    "    # Build a lookup of word→weight\n",
+    "    weights = {w.lower(): wt for w, wt in explanation}\n",
+    "    max_w = max(abs(wt) for wt in weights.values()) if weights else 1.0\n",
     "\n",
-    "    # Build display components\n",
+    "    # 3) Render probability bars\n",
     "    prob_rows = []\n",
     "    for i, name in enumerate(label_names):\n",
     "        pct = probs[i] * 100\n",
@@ -207,14 +222,31 @@
     "        })\n",
     "        prob_rows.append(\n",
     "            html.Div([bar, html.Span(f\" {name}: {pct:.1f}%\")],\n",
-    "                     style={\"display\": \"flex\", \"alignItems\": \"center\", \"margin\": \"4px 0\"})\n",
+    "                     style={\"display\":\"flex\",\"alignItems\":\"center\",\"margin\":\"4px 0\"})\n",
     "        )\n",
     "\n",
+    "    # 4) Highlight important words\n",
+    "    nodes = []\n",
+    "    for word in input_text.split():\n",
+    "        key = word.strip(\".,!?;:\").lower()\n",
+    "        if key in weights:\n",
+    "            w = weights[key]\n",
+    "            opacity = min(abs(w)/max_w,1.0)\n",
+    "            color = f\"rgba(255,165,0,{opacity:.2f})\"\n",
+    "            nodes.append(html.Span(word+\" \",\n",
+    "                                   style={\"backgroundColor\": color},\n",
+    "                                   title=f\"Weight: {w:+.2f}\"))\n",
+    "        else:\n",
+    "            nodes.append(html.Span(word+\" \"))\n",
+    "\n",
+    "    # 5) Compose output\n",
     "    return html.Div([\n",
-    "        html.H4(f\"Prediction: {pred_label}\", style={\"textAlign\": \"center\"}),\n",
-    "        html.P(f\"Confidence: {confidence*100:.2f}%\", style={\"textAlign\": \"center\"}),\n",
-    "        html.Div(prob_rows, style={\"margin\": \"0.5em 0\"})\n",
-    "    ])\n"
+    "        html.H4(f\"Prediction: {pred_label}\", style={\"textAlign\":\"center\"}),\n",
+    "        html.P(f\"Confidence: {confidence*100:.2f}%\", style={\"textAlign\":\"center\"}),\n",
+    "        html.Div(prob_rows, style={\"margin\":\"0.5em 0\"}),\n",
+    "        html.P(nodes, style={\"lineHeight\":\"1.8em\"})\n",
+    "    ])\n",
+    "\n"
    ]
   },
   {
