style(ui): polish BatchUpload hover, bar rounding, and add accessibility labels

--- a/notebooks/05_longformer_full.ipynb
+++ b/notebooks/05_longformer_full.ipynb
@@ -14,11 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
@@ -85,8 +81,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "MyProject (Conda)",
+   "language": "python",
+   "name": "myproject"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
