docs: finalize dashboard notebook with design integration notes

--- a/notebooks/06_dashboard_dash.ipynb
+++ b/notebooks/06_dashboard_dash.ipynb
@@ -280,6 +280,28 @@
     "if __name__ == \"__main__\":\n",
     "    app.run_server(debug=True)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dashboard Design & Integration\n",
+    "\n",
+    "- **EDA Tab**: validates data assumptions (class balance, length differences).\n",
+    "- **Evaluation Tab**: shows ~91% accuracy, highlights AI-para vs AI-gen confusion.\n",
+    "- **Inference Tab**: live text input with LIME highlights (hover shows weights).\n",
+    "\n",
+    "This dashboard is ideal for presentations—walk examiners through data, model performance, and explainability in a unified interface.\n",
+    "\n",
+    "Alongside this, the **React** app and **Chrome extension** offer real-world workflows:\n",
+    "- React: single/batch analysis with an intuitive sidebar, dark mode, and drag-drop.\n",
+    "- Extension: scan any web page in-place, highlighting the exact cues that triggered the model.\n",
+    "\n",
+    "🔑 **Note:** Keep the FastAPI backend (`api_server.py`) running.  \n",
+    "Dash can run standalone (it loads the model internally), but for full parity use the API.\n",
+    "\n",
+    "> The modular design means you can upgrade each component independently—good software practice for extending this project further.\n"
+   ]
   }
  ],
  "metadata": {
